# Crux

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  main.cpp  readme.md
.cache/clangd/index/: Error.cpp.02EB60BEE20365DD.idx  Error.h.BDA96B0F644E6C23.idx  Expr.cpp.638DCC6074CAEF79.idx  Expr.h.E75E12D5B35D7582.idx  Interpreter.h.55B3D8CAC8E3B35B.idx  Object.cpp.EBD194D952E5C533.idx  Object.h.4E1F09C3C453DF51.idx  Parser.cpp.FCE22DDF46DBBDB6.idx  Parser.h.2E582407D18D50BB.idx  PrettyPrinter.h.AD4C5A7F7EFA3373.idx  RuntimeError.h.C6D31227470AB729.idx  Scanner.cpp.787FE7979F124317.idx  Scanner.h.5E005782A1D6204F.idx  TestAst.cpp.355D0FD5825B8A51.idx  TestParser.cpp.BF77C0111CD8D297.idx  TestScanner.cpp.4740695618A19927.idx  Token.h.E590C8DE04B1BDB1.idx  gmock-actions.h.7846642E91D27AD9.idx  gmock-all.cc.816267EA570253A0.idx  gmock-cardinalities.cc.96A17C8A0CB9AD02.idx  gmock-cardinalities.h.AC58582349266184.idx  gmock-function-mocker.h.3A2AFD4289A8DE25.idx  gmock-generated-actions.h.A15AEFD291A3DD8F.idx  gmock-internal-utils.cc.7A5C01B6DDAD7D70.idx  gmock-internal-utils.h.88A2F1773D24AAE3.idx  gmock-matchers.cc.CE14FCF75019F863.idx  gmock-matchers.h.67015ABED4F05496.idx  gmock-matchers.h.9DDD59E806E9A6D2.idx  gmock-more-actions.h.D2D9DE7146684A6B.idx  gmock-more-matchers.h.41EE9A2E2A1CC660.idx  (+45 more)
.github/workflows/: workflow.yaml
Testing/: CMakeLists.txt  TestScanner.cpp
Tooling/: GenAst.cpp
include/: AstPrinter.h  CruxCallable.h  CruxClass.h  CruxInstance.h  Error.h  Expr.h  Function.h  Interpreter.h  NativeFunction.h  Parser.h  PrettyPrinter.h  Resolver.h  Return.h  Scanner.h  Statement.h  Token.h
include/env/: Env.h
include/utls/: Object.h  RuntimeError.h
src/: AstPrinter.cpp  CMakeLists.txt  CruxClass.cpp  Error.cpp  Error.h  Expr.cpp  Expr.h  Function.cpp  Interpreter.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  Scanner.h  Statement.cpp  Token.h
src/Expr/: BinaryExp.cpp  Grouping.cpp  LiteralExp.cpp  UnaryExp.cpp
src/env/: Env.cpp
src/utls/: Object.cpp
test/: CMakeLists.txt  TestAst.cpp  TestInterpreter.cpp  TestParser.cpp  TestScanner.cpp
